[package]
name = "dao-voting-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_voting_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl= "0.28.0"
#ahash = "=0.7.6"
ahash = "=0.8.6"  # or another version known to work


# anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"] }
# anchor-spl = { git = "https://github.com/coral-xyz/anchor.git" }

getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.16.17"
winnow="=0.4.1"
toml_datetime="=0.6.1"
